# tagrip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
examples/: sample.md
src/tagrip/: __init__.py  __main__.py  apply.py  cli.py  extractor.py  parser.py  vocabulary.py
tests/: test_apply.py  test_cli.py  test_extractor.py  test_parser.py  test_vocabulary.py
